--- a/index.html
+++ b/index.html
@@ -5,11 +5,21 @@
   </head>
   <body>
     <a-scene altspace="fullspace:true;">
-      <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-      <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-      <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
-      <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
-      <a-sky color="#ECECEC"></a-sky>
+      <a-assets>
+          <img id="uv" src="uv.jpg">	
+      </a-assets>
+
+      <a-entity n-gltf="url:box.gltf;" position="-1 0.5 -3" rotation="0 45 0"></a-entity>
+      <a-entity n-gltf="url:sphere.gltf" position="0 1.25 -5" ></a-entity>
+      <a-entity n-gltf="url:cylinder.gltf" position="1 0.75 -3" ></a-entity>
+      <a-entity n-gltf="url:plane.gltf"></a-entity>
+  <!-- 
+      <a-gltf-model src="box.gltf" position="-1 0.5 -3" rotation="0 45 0"></a-gltf-model>
+      <a-gltf-model src="sphere.gltf" position="0 1.25 -5" ></a-gltf-model>
+      <a-gltf-model src="cylinder.gltf" position="1 0.75 -3" ></a-gltf-model>
+      <a-gltf-model src="plane.gltf"></a-gltf-model> 
+     -->   
+      <a-sky color="#628395" radius="2500"></a-sky>
     </a-scene>
   </body>
 </html>
