--- a/index.html
+++ b/index.html
@@ -8,14 +8,12 @@
         <img id="uv" src="uv.jpg">
         <img id="tree_cone_mtl" src="tree_cone.png">  
         <img id="tree_cone_mtl_01" src="tree_cone_light_purple.png">  
-        <img id="tree_cone_mtl_02" src="tree_cone_imperial.png">              
+        <img id="tree_cone_mtl_02" src="tree_cone_imperial.png"> 
+        <a-asset-item id="pine_tree_gltf" src="pine_tree.gltf"></a-asset-item>             
       </a-assets>
       <a-entity obj-model="mtl:mountains.mtl;obj:mountains.obj" id="mountains"></a-entity>  
 <a-entity id="pine_tree">
-      <a-entity obj-model="mtl:stump.mtl;obj:stump.obj" id="stump"></a-entity> 
-      <a-entity position="-0.3 26.496 0" scale="2.576 41.168 2.809" geometry="primitive:cone" id="tree_cone" material="transparent:true;src:#tree_cone_mtl;"></a-entity>
-      <a-entity position="-0.3 26.496 0" scale="2.576 41.168 2.809" geometry="primitive:cone" id="tree_cone_light_purple" material="transparent:true;src:#tree_cone_mtl_01;"></a-entity>
-      <a-entity position="-0.3 26.496 0" scale="2.576 41.168 2.809" geometry="primitive:cone" id="tree_cone_imerial" material="transparent:true;src:#tree_cone_mtl_02;opacity:.5"></a-entity>
+    <a-entity gltf-model="#pine_tree_gltf"></a-entity>
 </a-entity>
         <!--ground/sky-->
         <a-sky color="#ACECF7" radius="2500"></a-sky>
