--- a/index.html
+++ b/index.html
@@ -17,7 +17,52 @@
       <a-entity obj-model="mtl:stump.mtl;obj:stump.obj" position="114.301 0 3.948" scale="127.774 1.524 127.774" id="mountain-3"></a-entity>
       <a-entity obj-model="mtl:stump.mtl;obj:stump.obj" position="-144.332 -1.174 187.664" scale="23.883 0.285 33.993" id="mountain-4"></a-entity>
       <a-entity obj-model="mtl:stump.mtl;obj:stump.obj" position="-70.698 -1.174 211.483" scale="23.883 0.285 33.993" id="mountain-5"></a-entity>
+      <a-entity obj-model="mtl:stump01.mtl;obj:stump.obj" position="-22.623 -1.174 211.483" scale="23.883 0.285 33.993" id="starter"></a-entity>
+      <a-entity obj-model="mtl:stump02.mtl;obj:stump.obj" position="31.286 -1.174 211.483" scale="23.883 0.285 33.993" id="starter-2"></a-entity>
+      <a-entity obj-model="mtl:stump03.mtl;obj:stump.obj" position="87.706 -1.174 211.483" scale="23.883 0.285 33.993" id="starter-3"></a-entity>
+      <a-entity obj-model="mtl:stump04.mtl;obj:stump.obj" position="123.103 -1.174 211.483" scale="23.883 0.285 33.993" id="starter-4"></a-entity>
 
+
+      <a-entity obj-model="mtl:stump04.mtl;obj:stump.obj" position="-180.661 -5.33 735.716" scale="321.686 24.347 98.892" id="starter-5"></a-entity>
+      <a-entity id="thing1">
+          <a-entity obj-model="mtl:stump03.mtl;obj:stump.obj" position="87.706 -1.174 264.386" scale="23.883 0.285 33.993" id="starter-6"></a-entity><a-entity obj-model="mtl:stump03.mtl;obj:stump.obj" position="77.678 -1.174 298.295" scale="23.883 0.285 33.993" id="starter-7"></a-entity><a-entity obj-model="mtl:stump03.mtl;obj:stump.obj" position="77.678 -1.527 338.68" scale="23.883 2.349 33.993" id="starter-8" rotation="0 0 -5.901465289847479"></a-entity><a-entity obj-model="mtl:stump03.mtl;obj:stump.obj" position="77.678 -5.844 380.051" scale="23.883 3.129 33.993" id="starter-9" rotation="0 0 6.990085100596043"></a-entity><a-entity obj-model="mtl:stump03.mtl;obj:stump.obj" position="77.678 -1.527 423.105" scale="68.086 3.649 33.993" id="starter-10"></a-entity>
+      </a-entity>
+      <a-entity id="bushes">
+          <a-entity id="bush" position="0 4.318 0" scale="11.272 11.272 11.272">
+              <a-entity id="_1" geometry="" material="transparent:true;src:bush.png" scale="0.006 1 1"></a-entity>
+              <a-entity id="_2" geometry="" material="transparent:true;src:bush.png" rotation="0 -92.01702189801021 0" scale="0.005 1 1"></a-entity>
+              </a-entity><a-entity id="bush-2" position="-30.389 5.328 -0.312" scale="12.622 12.622 12.622">
+              <a-entity id="_1" geometry="" material="transparent:true;src:bush.png" scale="0.006 1 1"></a-entity>
+              <a-entity id="_2" geometry="" material="transparent:true;src:bush.png" rotation="0 -92.01702189801021 0" scale="0.005 1 1"></a-entity>
+              </a-entity><a-entity id="bush-3" position="-22.647 0.894 10.615" scale="2.781 2.781 2.781">
+              <a-entity id="_1" geometry="" material="transparent:true;src:bush.png" scale="0.006 1 1"></a-entity>
+              <a-entity id="_2" geometry="" material="transparent:true;src:bush.png" rotation="0 -92.01702189801021 0" scale="0.005 1 1"></a-entity>
+              </a-entity><a-entity id="bush-4" position="-11.446 3.494 6.326" scale="8.202 8.202 8.202">
+              <a-entity id="_1" geometry="" material="transparent:true;src:bush.png" scale="0.006 1 1"></a-entity>
+              <a-entity id="_2" geometry="" material="transparent:true;src:bush.png" rotation="0 -92.01702189801021 0" scale="0.005 1 1"></a-entity>
+              </a-entity><a-entity id="bush-5" position="-8.582 0.894 8.886" scale="2.781 2.781 2.781">
+              <a-entity id="_1" geometry="" material="transparent:true;src:bush.png" scale="0.006 1 1"></a-entity>
+              <a-entity id="_2" geometry="" material="transparent:true;src:bush.png" rotation="0 -92.01702189801021 0" scale="0.005 1 1"></a-entity>
+              </a-entity><a-entity id="bush-7" position="-8.47 0.894 10.911" scale="2.781 2.781 2.781">
+              <a-entity id="_1" geometry="" material="transparent:true;src:bush.png" scale="0.006 1 1"></a-entity>
+              <a-entity id="_2" geometry="" material="transparent:true;src:bush.png" rotation="0 -92.01702189801021 0" scale="0.005 1 1"></a-entity>
+              </a-entity><a-entity id="bush-9" position="-2.781 0.894 9.569" scale="2.781 2.781 2.781">
+              <a-entity id="_1" geometry="" material="transparent:true;src:bush.png" scale="0.006 1 1"></a-entity>
+              <a-entity id="_2" geometry="" material="transparent:true;src:bush.png" rotation="0 -92.01702189801021 0" scale="0.005 1 1"></a-entity>
+              </a-entity><a-entity id="bush-10" position="-8.687 0.894 -0.741" scale="2.781 2.781 2.781">
+              <a-entity id="_1" geometry="" material="transparent:true;src:bush.png" scale="0.006 1 1"></a-entity>
+              <a-entity id="_2" geometry="" material="transparent:true;src:bush.png" rotation="0 -92.01702189801021 0" scale="0.005 1 1"></a-entity>
+              </a-entity><a-entity id="bush-11" position="0.645 0.894 6.06" scale="2.781 2.781 2.781">
+              <a-entity id="_1" geometry="" material="transparent:true;src:bush.png" scale="0.006 1 1"></a-entity>
+              <a-entity id="_2" geometry="" material="transparent:true;src:bush.png" rotation="0 -92.01702189801021 0" scale="0.005 1 1"></a-entity>
+              </a-entity><a-entity id="bush-8" position="-21.105 0.894 -4.032" scale="2.781 2.781 2.781">
+              <a-entity id="_1" geometry="" material="transparent:true;src:bush.png" scale="0.006 1 1"></a-entity>
+              <a-entity id="_2" geometry="" material="transparent:true;src:bush.png" rotation="0 -92.01702189801021 0" scale="0.005 1 1"></a-entity>
+              </a-entity><a-entity id="bush-6" position="-10.676 0.894 1.269" scale="2.781 2.781 2.781">
+              <a-entity id="_1" geometry="" material="transparent:true;src:bush.png" scale="0.006 1 1"></a-entity>
+              <a-entity id="_2" geometry="" material="transparent:true;src:bush.png" rotation="0 -92.01702189801021 0" scale="0.005 1 1"></a-entity>
+              </a-entity>
+      </a-entity>
       <a-entity id="trees">
    
           <a-entity id="tree" position="66.107 0 0">
