--- a/index.html
+++ b/index.html
@@ -27,42 +27,19 @@
       <a-entity id="thing1">
           <a-entity obj-model="mtl:stump03.mtl;obj:stump.obj" position="87.706 -1.174 264.386" scale="23.883 0.285 33.993" id="starter-6"></a-entity><a-entity obj-model="mtl:stump03.mtl;obj:stump.obj" position="77.678 -1.174 298.295" scale="23.883 0.285 33.993" id="starter-7"></a-entity><a-entity obj-model="mtl:stump03.mtl;obj:stump.obj" position="77.678 -1.527 338.68" scale="23.883 2.349 33.993" id="starter-8" rotation="0 0 -5.901465289847479"></a-entity><a-entity obj-model="mtl:stump03.mtl;obj:stump.obj" position="77.678 -5.844 380.051" scale="23.883 3.129 33.993" id="starter-9" rotation="0 0 6.990085100596043"></a-entity><a-entity obj-model="mtl:stump03.mtl;obj:stump.obj" position="77.678 -1.527 423.105" scale="68.086 3.649 33.993" id="starter-10"></a-entity>
       </a-entity>
-      <a-entity id="bushes">
-          <a-entity id="bush" position="0 4.318 0" scale="11.272 11.272 11.272">
-              <a-entity id="_1" geometry="" material="transparent:true;src:bush.png" scale="0.006 1 1"></a-entity>
-              <a-entity id="_2" geometry="" material="transparent:true;src:bush.png" rotation="0 -92.01702189801021 0" scale="0.005 1 1"></a-entity>
-              </a-entity><a-entity id="bush-2" position="-30.389 5.328 -0.312" scale="12.622 12.622 12.622">
-              <a-entity id="_1" geometry="" material="transparent:true;src:bush.png" scale="0.006 1 1"></a-entity>
-              <a-entity id="_2" geometry="" material="transparent:true;src:bush.png" rotation="0 -92.01702189801021 0" scale="0.005 1 1"></a-entity>
-              </a-entity><a-entity id="bush-3" position="-22.647 0.894 10.615" scale="2.781 2.781 2.781">
-              <a-entity id="_1" geometry="" material="transparent:true;src:bush.png" scale="0.006 1 1"></a-entity>
-              <a-entity id="_2" geometry="" material="transparent:true;src:bush.png" rotation="0 -92.01702189801021 0" scale="0.005 1 1"></a-entity>
-              </a-entity><a-entity id="bush-4" position="-11.446 3.494 6.326" scale="8.202 8.202 8.202">
-              <a-entity id="_1" geometry="" material="transparent:true;src:bush.png" scale="0.006 1 1"></a-entity>
-              <a-entity id="_2" geometry="" material="transparent:true;src:bush.png" rotation="0 -92.01702189801021 0" scale="0.005 1 1"></a-entity>
-              </a-entity><a-entity id="bush-5" position="-8.582 0.894 8.886" scale="2.781 2.781 2.781">
-              <a-entity id="_1" geometry="" material="transparent:true;src:bush.png" scale="0.006 1 1"></a-entity>
-              <a-entity id="_2" geometry="" material="transparent:true;src:bush.png" rotation="0 -92.01702189801021 0" scale="0.005 1 1"></a-entity>
-              </a-entity><a-entity id="bush-7" position="-8.47 0.894 10.911" scale="2.781 2.781 2.781">
-              <a-entity id="_1" geometry="" material="transparent:true;src:bush.png" scale="0.006 1 1"></a-entity>
-              <a-entity id="_2" geometry="" material="transparent:true;src:bush.png" rotation="0 -92.01702189801021 0" scale="0.005 1 1"></a-entity>
-              </a-entity><a-entity id="bush-9" position="-2.781 0.894 9.569" scale="2.781 2.781 2.781">
-              <a-entity id="_1" geometry="" material="transparent:true;src:bush.png" scale="0.006 1 1"></a-entity>
-              <a-entity id="_2" geometry="" material="transparent:true;src:bush.png" rotation="0 -92.01702189801021 0" scale="0.005 1 1"></a-entity>
-              </a-entity><a-entity id="bush-10" position="-8.687 0.894 -0.741" scale="2.781 2.781 2.781">
-              <a-entity id="_1" geometry="" material="transparent:true;src:bush.png" scale="0.006 1 1"></a-entity>
-              <a-entity id="_2" geometry="" material="transparent:true;src:bush.png" rotation="0 -92.01702189801021 0" scale="0.005 1 1"></a-entity>
-              </a-entity><a-entity id="bush-11" position="0.645 0.894 6.06" scale="2.781 2.781 2.781">
-              <a-entity id="_1" geometry="" material="transparent:true;src:bush.png" scale="0.006 1 1"></a-entity>
-              <a-entity id="_2" geometry="" material="transparent:true;src:bush.png" rotation="0 -92.01702189801021 0" scale="0.005 1 1"></a-entity>
-              </a-entity><a-entity id="bush-8" position="-21.105 0.894 -4.032" scale="2.781 2.781 2.781">
-              <a-entity id="_1" geometry="" material="transparent:true;src:bush.png" scale="0.006 1 1"></a-entity>
-              <a-entity id="_2" geometry="" material="transparent:true;src:bush.png" rotation="0 -92.01702189801021 0" scale="0.005 1 1"></a-entity>
-              </a-entity><a-entity id="bush-6" position="-10.676 0.894 1.269" scale="2.781 2.781 2.781">
-              <a-entity id="_1" geometry="" material="transparent:true;src:bush.png" scale="0.006 1 1"></a-entity>
-              <a-entity id="_2" geometry="" material="transparent:true;src:bush.png" rotation="0 -92.01702189801021 0" scale="0.005 1 1"></a-entity>
+      <a-entity id="bushes" position="0 -0.904 0">
+          <a-entity id="bush" position="0 4.829 0">
+              <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush.png" rotation="0 90 0"></a-entity>
+              <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush.png"></a-entity>
               </a-entity>
+              
+
       </a-entity>
+      <!--
+      <a-entity id="test">
+          <a-entity geometry="primitive: plane; height: 10; width: 10" material="side: double;transparent:true;src:bush.png"></a-entity>
+      </a-entity>
+      -->
       <a-entity id="trees">
    
           <a-entity id="tree" position="66.107 0 0">
