--- a/index.html
+++ b/index.html
@@ -27,8 +27,61 @@
       <a-entity id="thing1">
           <a-entity obj-model="mtl:stump03.mtl;obj:stump.obj" position="87.706 -1.174 264.386" scale="23.883 0.285 33.993" id="starter-6"></a-entity><a-entity obj-model="mtl:stump03.mtl;obj:stump.obj" position="77.678 -1.174 298.295" scale="23.883 0.285 33.993" id="starter-7"></a-entity><a-entity obj-model="mtl:stump03.mtl;obj:stump.obj" position="77.678 -1.527 338.68" scale="23.883 2.349 33.993" id="starter-8" rotation="0 0 -5.901465289847479"></a-entity><a-entity obj-model="mtl:stump03.mtl;obj:stump.obj" position="77.678 -5.844 380.051" scale="23.883 3.129 33.993" id="starter-9" rotation="0 0 6.990085100596043"></a-entity><a-entity obj-model="mtl:stump03.mtl;obj:stump.obj" position="77.678 -1.527 423.105" scale="68.086 3.649 33.993" id="starter-10"></a-entity>
       </a-entity>
+      <!--begin bushes-->
       <a-entity id="bushes" position="32.385 -0.904 59.372">
-          <a-entity id="bush" position="0 4.829 0">
+          <a-entity id="bush" position="-4.892 2.405 11.119" scale="0.343 0.343 0.343">
+
+              <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush1.png" scale="0.551 1 1"></a-entity>
+              <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush1.png" rotation="0 90 0" scale="0.551 1 1"></a-entity>
+              </a-entity><a-entity id="bush-2" position="-5 2.405 13.286" scale="0.343 0.343 0.343">
+
+              <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush1.png" scale="0.551 1 1"></a-entity>
+              <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush1.png" rotation="0 90 0" scale="0.551 1 1"></a-entity>
+              </a-entity><a-entity id="bush-3" position="-1.68 2.405 16.122" scale="0.343 0.343 0.343">
+
+              <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush1.png" scale="0.551 1 1"></a-entity>
+              <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush1.png" rotation="0 90 0" scale="0.551 1 1"></a-entity>
+              </a-entity><a-entity id="bush-4" position="-4.107 2.405 17.681" scale="0.343 0.343 0.343">
+
+              <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush1.png" scale="0.551 1 1"></a-entity>
+              <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush1.png" rotation="0 90 0" scale="0.551 1 1"></a-entity>
+              </a-entity><a-entity id="bush-5" position="-9.249 2.405 16.443" scale="0.343 0.343 0.343">
+
+              <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush1.png" scale="0.551 1 1"></a-entity>
+              <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush1.png" rotation="0 90 0" scale="0.551 1 1"></a-entity>
+              </a-entity><a-entity id="bush-6" position="-6.084 2.405 20.292" scale="0.343 0.343 0.343">
+
+              <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush1.png" scale="0.551 1 1"></a-entity>
+              <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush1.png" rotation="0 90 0" scale="0.551 1 1"></a-entity>
+              </a-entity><a-entity id="bush-7" position="-8.158 2.405 18.874" scale="0.343 0.343 0.343">
+
+              <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush1.png" scale="0.551 1 1"></a-entity>
+              <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush1.png" rotation="0 90 0" scale="0.551 1 1"></a-entity>
+              </a-entity><a-entity id="bush-8" position="-4.634 2.405 19.538" scale="0.343 0.343 0.343">
+
+              <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush1.png" scale="0.551 1 1"></a-entity>
+              <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush1.png" rotation="0 90 0" scale="0.551 1 1"></a-entity>
+              </a-entity><a-entity id="bush-9" position="-7.896 2.405 31.607" scale="0.343 0.343 0.343">
+
+              <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush1.png" scale="0.551 1 1"></a-entity>
+              <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush1.png" rotation="0 90 0" scale="0.551 1 1"></a-entity>
+              </a-entity><a-entity id="bush-10" position="-7.913 2.405 34.359" scale="0.343 0.343 0.343">
+
+              <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush1.png" scale="0.551 1 1"></a-entity>
+              <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush1.png" rotation="0 90 0" scale="0.551 1 1"></a-entity>
+              </a-entity><a-entity id="bush-11" position="-9.069 2.405 33.648" scale="0.343 0.343 0.343">
+
+              <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush1.png" scale="0.551 1 1"></a-entity>
+              <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush1.png" rotation="0 90 0" scale="0.551 1 1"></a-entity>
+              </a-entity><a-entity id="bush-12" position="-11.281 2.405 31.014" scale="0.343 0.343 0.343">
+
+              <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush1.png" scale="0.551 1 1"></a-entity>
+              <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush1.png" rotation="0 90 0" scale="0.551 1 1"></a-entity>
+              </a-entity><a-entity id="bush-13" position="-13.887 2.405 31.459" scale="0.343 0.343 0.343">
+
+              <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush1.png" scale="0.551 1 1"></a-entity>
+              <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush1.png" rotation="0 90 0" scale="0.551 1 1"></a-entity>
+              </a-entity><a-entity id="bush-14" position="-15.612 2.405 31.944" scale="0.343 0.343 0.343">
 
               <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush1.png" scale="0.551 1 1"></a-entity>
               <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush1.png" rotation="0 90 0" scale="0.551 1 1"></a-entity>
@@ -37,22 +90,63 @@
 
                   <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush2.png" scale="0.551 1 1"></a-entity>
                   <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush2.png" rotation="0 90 0" scale="0.551 1 1"></a-entity>
+                  </a-entity><a-entity id="bush2-2" position="-0.504 4.829 3.475">
+
+                  <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush2.png" scale="0.551 1 1"></a-entity>
+                  <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush2.png" rotation="0 90 0" scale="0.551 1 1"></a-entity>
+                  </a-entity><a-entity id="bush2-3" position="-2.078 4.829 29.812">
+
+                  <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush2.png" scale="0.551 1 1"></a-entity>
+                  <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush2.png" rotation="0 90 0" scale="0.551 1 1"></a-entity>
+                  </a-entity><a-entity id="bush2-4" position="-9.218 4.829 29.13">
+
+                  <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush2.png" scale="0.551 1 1"></a-entity>
+                  <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush2.png" rotation="0 90 0" scale="0.551 1 1"></a-entity>
+                  </a-entity><a-entity id="bush2-5" position="-20.846 4.829 15.662">
+
+                  <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush2.png" scale="0.551 1 1"></a-entity>
+                  <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush2.png" rotation="0 90 0" scale="0.551 1 1"></a-entity>
+                  </a-entity><a-entity id="bush2-7" position="-12.519 4.829 3.62">
+
+                  <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush2.png" scale="0.551 1 1"></a-entity>
+                  <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush2.png" rotation="0 90 0" scale="0.551 1 1"></a-entity>
+                  </a-entity><a-entity id="bush2-6" position="-19.19 4.829 29.669">
+
+                  <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush2.png" scale="0.551 1 1"></a-entity>
+                  <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush2.png" rotation="0 90 0" scale="0.551 1 1"></a-entity>
                   </a-entity>          
 
-      </a-entity>
+      </a-entity><!--end bushes-->
+      <!--begin bushes 2-->
       <a-entity id="bushes-2" position="15.616 -0.904 -43.568">
           <a-entity id="bush" position="0 4.829 0">
 
               <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush1.png" scale="0.551 1 1"></a-entity>
               <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush1.png" rotation="0 90 0" scale="0.551 1 1"></a-entity>
               </a-entity>
-              <a-entity id="bush2" position="0 4.829 0">
+              <a-entity id="bush2" position="-4.195 4.829 -9.293">
+
+                  <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush2.png" scale="0.551 1 1"></a-entity>
+                  <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush2.png" rotation="0 90 0" scale="0.551 1 1"></a-entity>
+                  </a-entity><a-entity id="bush2-8" position="-13.512 1.732 5.332" scale="0.212 0.212 0.212">
+
+                  <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush2.png" scale="0.551 1 1" position="0.556 0 -7.317"></a-entity>
+                  <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush2.png" rotation="0 90 0" scale="0.551 1 1" position="-13.723 0 -3.693"></a-entity>
+                  </a-entity><a-entity id="bush2-9" position="-12.95 1.732 5.684" scale="0.212 0.212 0.212">
+
+                  <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush2.png" scale="0.551 1 1"></a-entity>
+                  <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush2.png" rotation="0 90 0" scale="0.551 1 1"></a-entity>
+                  </a-entity><a-entity id="bush2-10" position="-14.381 1.732 6.398" scale="0.212 0.212 0.212">
+
+                  <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush2.png" scale="0.551 1 1" position="0.764 0 7.185"></a-entity>
+                  <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush2.png" rotation="0 90 0" scale="0.551 1 1" position="-6.778 0 1.254"></a-entity>
+                  </a-entity><a-entity id="bush2-11" position="-13.18 1.732 7.361" scale="0.212 0.212 0.212">
 
                   <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush2.png" scale="0.551 1 1"></a-entity>
                   <a-entity geometry="primitive:plane;height:10;width:10" material="side:double;transparent:true;src:bush2.png" rotation="0 90 0" scale="0.551 1 1"></a-entity>
                   </a-entity>          
 
-      </a-entity>
+      </a-entity> <!--end bushes 2-->
       <!--
       <a-entity id="test">
           <a-entity geometry="primitive: plane; height: 10; width: 10" material="side: double;transparent:true;src:bush.png"></a-entity>
