--- a/index.html
+++ b/index.html
@@ -13,20 +13,24 @@
         <img id="tree_cone_mtl_02" src="tree_cone_imperial.png"> 
         <a-asset-item id="pine_tree_gltf" src="pine_tree.gltf"></a-asset-item>             
       </a-assets>
-      <a-entity obj-model="mtl:stump.mtl;obj:stump.obj" position="-327.406 0 3.948" scale="127.774 1.524 127.774" id="mountain"></a-entity>
-      <a-entity obj-model="mtl:stump.mtl;obj:stump.obj" position="-191.664 -2.614 -172.628" scale="310.553 1.524 127.774" id="mountain-2"></a-entity>
-      <a-entity obj-model="mtl:stump.mtl;obj:stump.obj" position="114.301 0 3.948" scale="127.774 1.524 127.774" id="mountain-3"></a-entity>
-      <a-entity obj-model="mtl:stump.mtl;obj:stump.obj" position="-144.332 -1.174 187.664" scale="23.883 0.285 33.993" id="mountain-4"></a-entity>
-      <a-entity obj-model="mtl:stump.mtl;obj:stump.obj" position="-70.698 -1.174 211.483" scale="23.883 0.285 33.993" id="mountain-5"></a-entity>
-      <a-entity obj-model="mtl:stump01.mtl;obj:stump.obj" position="-22.623 -1.174 211.483" scale="23.883 0.285 33.993" id="starter"></a-entity>
-      <a-entity obj-model="mtl:stump02.mtl;obj:stump.obj" position="31.286 -1.174 211.483" scale="23.883 0.285 33.993" id="starter-2"></a-entity>
-      <a-entity obj-model="mtl:stump03.mtl;obj:stump.obj" position="87.706 -1.174 211.483" scale="23.883 0.285 33.993" id="starter-3"></a-entity>
-      <a-entity obj-model="mtl:stump04.mtl;obj:stump.obj" position="123.103 -1.174 211.483" scale="23.883 0.285 33.993" id="starter-4"></a-entity>
+      <a-entity obj-model="mtl:stump.mtl;obj:stump.obj" position="-327.406 0 3.948" scale="127.774 1.524 127.774" id="mountain" n-mesh-collider="type: environment"></a-entity>
+      <a-entity obj-model="mtl:stump.mtl;obj:stump.obj" position="-191.664 -2.614 -172.628" scale="310.553 1.524 127.774" id="mountain-2" n-mesh-collider="type: environment"></a-entity>
+      <a-entity obj-model="mtl:stump.mtl;obj:stump.obj" position="114.301 0 3.948" scale="127.774 1.524 127.774" id="mountain-3" n-mesh-collider="type: environment"></a-entity>
+      <a-entity obj-model="mtl:stump.mtl;obj:stump.obj" position="-144.332 -1.174 187.664" scale="23.883 0.285 33.993" id="mountain-4" n-mesh-collider="type: environment"></a-entity>
+      <a-entity obj-model="mtl:stump.mtl;obj:stump.obj" position="-70.698 -1.174 211.483" scale="23.883 0.285 33.993" id="mountain-5" n-mesh-collider="type: environment"></a-entity>
+      <a-entity obj-model="mtl:stump01.mtl;obj:stump.obj" position="-22.623 -1.174 211.483" scale="23.883 0.285 33.993" id="starter" n-mesh-collider="type: environment"></a-entity>
+      <a-entity obj-model="mtl:stump02.mtl;obj:stump.obj" position="31.286 -1.174 211.483" scale="23.883 0.285 33.993" id="starter-2" n-mesh-collider="type: environment"></a-entity>
+      <a-entity obj-model="mtl:stump03.mtl;obj:stump.obj" position="87.706 -1.174 211.483" scale="23.883 0.285 33.993" id="starter-3" n-mesh-collider="type: environment"></a-entity>
+      <a-entity obj-model="mtl:stump04.mtl;obj:stump.obj" position="123.103 -1.174 211.483" scale="23.883 0.285 33.993" id="starter-4" n-mesh-collider="type: environment"></a-entity>
 
 
-      <a-entity obj-model="mtl:stump04.mtl;obj:stump.obj" position="-180.661 -5.33 735.716" scale="321.686 24.347 98.892" id="starter-5"></a-entity>
+      <a-entity obj-model="mtl:stump04.mtl;obj:stump.obj" position="-180.661 -5.33 735.716" scale="321.686 24.347 98.892" id="starter-5" n-mesh-collider="type: environment"></a-entity>
       <a-entity id="thing1">
-          <a-entity obj-model="mtl:stump03.mtl;obj:stump.obj" position="87.706 -1.174 264.386" scale="23.883 0.285 33.993" id="starter-6"></a-entity><a-entity obj-model="mtl:stump03.mtl;obj:stump.obj" position="77.678 -1.174 298.295" scale="23.883 0.285 33.993" id="starter-7"></a-entity><a-entity obj-model="mtl:stump03.mtl;obj:stump.obj" position="77.678 -1.527 338.68" scale="23.883 2.349 33.993" id="starter-8" rotation="0 0 -5.901465289847479"></a-entity><a-entity obj-model="mtl:stump03.mtl;obj:stump.obj" position="77.678 -5.844 380.051" scale="23.883 3.129 33.993" id="starter-9" rotation="0 0 6.990085100596043"></a-entity><a-entity obj-model="mtl:stump03.mtl;obj:stump.obj" position="77.678 -1.527 423.105" scale="68.086 3.649 33.993" id="starter-10"></a-entity>
+          <a-entity obj-model="mtl:stump03.mtl;obj:stump.obj" position="87.706 -1.174 264.386" scale="23.883 0.285 33.993" id="starter-6"n-mesh-collider="type: environment"></a-entity>
+          <a-entity obj-model="mtl:stump03.mtl;obj:stump.obj" position="77.678 -1.174 298.295" scale="23.883 0.285 33.993" id="starter-7" n-mesh-collider="type: environment"></a-entity>
+          <a-entity obj-model="mtl:stump03.mtl;obj:stump.obj" position="77.678 -1.527 338.68" scale="23.883 2.349 33.993" id="starter-8" rotation="0 0 -5.901465289847479" n-mesh-collider="type: environment"></a-entity>
+          <a-entity obj-model="mtl:stump03.mtl;obj:stump.obj" position="77.678 -5.844 380.051" scale="23.883 3.129 33.993" id="starter-9" rotation="0 0 6.990085100596043" n-mesh-collider="type: environment"></a-entity>
+          <a-entity obj-model="mtl:stump03.mtl;obj:stump.obj" position="77.678 -1.527 423.105" scale="68.086 3.649 33.993" id="starter-10" n-mesh-collider="type: environment"></a-entity>
       </a-entity>
       <!--begin bushes-->
       <a-entity id="bushes" position="32.385 -0.904 59.372">
