--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <img id="uv" src="uv.jpg">
         <img id="sky" src="sky.jpg">
         <img id="floor" src="floor.png">
+        <img id="maptest" src="maptest.png">
         <img id="tree_cone_mtl" src="tree_cone.png">  
         <img id="tree_cone_mtl_01" src="tree_cone_light_purple.png">  
         <img id="tree_cone_mtl_02" src="tree_cone_imperial.png"> 
@@ -541,6 +542,7 @@
 
         <a-sky src="#sky" radius="2500"></a-sky>
             <a-plane position="0 0 -4" rotation="-90 0 0" width="4000" height="4000" material="color:#FFDAB9;src:#floor;repeat:4000 4000" altspace-cursor-collider='enabled: false'></a-plane>   
+            <a-plane id="maptest" position="-66.499 0.08000000000000007 126.997" rotation="-90 0 0" width="1000" height="1000" material="transparent:true;src:#maptest" altspace-cursor-collider="enabled:false" scale="0.417 0.433 0.528"></a-plane>
       </a-scene>
 <!--
   https://coolors.co/ffdab9-dac4f7-49306b-f4989c-acecf7  
