--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <a-entity obj-model="mtl:stump04.mtl;obj:stump.obj" position="123.103 -1.174 211.483" scale="23.883 0.285 33.993" id="starter-4" n-mesh-collider="type: environment"></a-entity>
 
 
-      <a-entity obj-model="mtl:stump04.mtl;obj:stump.obj" position="-180.661 -5.33 735.716" scale="321.686 24.347 98.892" id="starter-5" n-mesh-collider="type: environment"></a-entity>
+      <a-entity obj-model="mtl:stump04.mtl;obj:stump.obj" position="-180.661 -364.628 380.215" scale="321.686 24.347 98.892" id="starter-5" n-mesh-collider="type:environment"></a-entity>
       <a-entity id="thing1">
           <a-entity obj-model="mtl:stump03.mtl;obj:stump.obj" position="87.706 -1.174 264.386" scale="23.883 0.285 33.993" id="starter-6"n-mesh-collider="type: environment"></a-entity>
           <a-entity obj-model="mtl:stump03.mtl;obj:stump.obj" position="77.678 -1.174 298.295" scale="23.883 0.285 33.993" id="starter-7" n-mesh-collider="type: environment"></a-entity>
@@ -541,8 +541,8 @@
             <!--ground/sky-->
 
         <a-sky src="#sky" radius="2500"></a-sky>
-            <a-plane position="0 0 -4" rotation="-90 0 0" width="4000" height="4000" material="color:#FFDAB9;src:#floor;repeat:4000 4000" altspace-cursor-collider='enabled: false'></a-plane>   
-            <a-plane id="maptest" position="-66.499 1.21 126.997" rotation="-90 0 0" width="1000" height="1000" material="transparent:true;src:#maptest;opacity:1;" altspace-cursor-collider="enabled:false" scale="0.417 0.433 0.528"></a-plane>
+        <a-plane position="0 -1.03 -4" rotation="-90 0 0" width="4000" height="4000" material="repeat:4000 4000;color:#FFDAB9;src:#floor;" altspace-cursor-collider="enabled:false"></a-plane> 
+        <a-plane id="maptest" position="-66.499 -0.8500000000000001 126.997" rotation="-90 0 0" width="1000" height="1000" material="transparent:true;src:#maptest;" altspace-cursor-collider="enabled:false" scale="0.417 0.433 0.528"></a-plane>
       </a-scene>
 <!--
   https://coolors.co/ffdab9-dac4f7-49306b-f4989c-acecf7  
